added seminary bits

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@ Welcome to the homepage of Alex J. Best
 <p>
 Due to the fact I accidentally rmed the wrong directory the other day the previous content of this page has been lost, oh well, it wasn't that interesting anyway. <br />
 Until I rewrite this page a little nicer you can find the following here: <br />
-<a href="wulnr/CS254.pdf">Lecture notes for CS254 Algorithmic Graph Theory</a> <br />
 </p>
+<h4>Documents</h4>
+<a href="wulnr/CS254.pdf">Lecture notes for CS254 Algorithmic Graph Theory</a> <br />
 
+<h4>Teaching</h4>
+<h5>CS137 Discrete Maths and its Applications 2<h5>
+<a href="cs137/cs137-q1.pdf">Seminar 1 questions</a> <br />
 </body>
 </html>
