Added more content, and bootstrap

--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <html>
 <head>
 <title>
-Welcome to the homepage of Alex J. Best
+Alex Best's homepage
 </title>
+<link href="dist/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
 <h2>Welcome</h2>
 <p>
-Due to the fact I accidentally rmed the wrong directory the other day the previous content of this page has been lost, oh well, it wasn't that interesting anyway. <br />
-Until I rewrite this page a little nicer you can find the following here: <br />
+Due to the fact I accidentally rmed the wrong directory the other day the previous content of this page has been lost, oh well, it wasn't that interesting anyway.
 </p>
+
+<br />
+
 <h4>Documents</h4>
-<a href="wulnr/CS254.pdf">Lecture notes for CS254 Algorithmic Graph Theory</a> <br />
+<p>
+<a href="wulnr/CS254.pdf">Lecture notes</a> for <a href="http://www2.warwick.ac.uk/fac/sci/dcs/teaching/modules/cs254">CS254 Algorithmic Graph Theory</a>
+</p>
+
+<br />
 
 <h4>Teaching</h4>
 <h5>CS137 Discrete Maths and its Applications 2<h5>
-<a href="cs137/cs137-q1.pdf">Seminar 1 questions</a> <br />
+<p>
+<a href="cs137/cs137-q1.pdf">Seminar 1 question sheet</a>
+</p>
+
+<br />
+
+<h4>Talks</h4>
+<p>Geometric approaches to solving Diophantine equations, at <a href="http://mathsoc.cms.gre.ac.uk/tmt/">Tomorrow's Mathematicians Today 2013</a>, <a href="TMTTalkSlides.pdf">(slides)</a>
+<br />
+Category Theory I (with <a href="http://homepages.warwick.ac.uk/~maulfn/">Ben Wormleighton</a>)
+</p>
+
+<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="dist/js/bootstrap.min.js"></script>
 </body>
 </html>
