--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Due to the fact I accidentally rmed the wrong directory the other day the previo
 <h4>Talks</h4>
 <p>Geometric approaches to solving Diophantine equations, at <a href="http://mathsoc.cms.gre.ac.uk/tmt/">Tomorrow's Mathematicians Today 2013</a>, <a href="TMTTalkSlides.pdf">(slides)</a>
 <br />
-Category Theory I (with <a href="http://homepages.warwick.ac.uk/~maulfn/">Ben Wormleighton</a>)
+Category Theory I, at Warwick Mathematics Society talks (with <a href="http://homepages.warwick.ac.uk/~maulfn/">Ben Wormleighton</a>)
 </p>
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
