--- a/index.html
+++ b/index.html
@@ -1,40 +1,71 @@
+<!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 <title>
 Alex Best's homepage
 </title>
 <link href="dist/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-<h2>Welcome</h2>
+<div class="jumbotron">
+<div class="row">
+<div class="col-sm-8">
+<h1>Hello world!</h1>
 <p>
-Due to the fact I accidentally rmed the wrong directory the other day the previous content of this page has been lost, oh well, it wasn't that interesting anyway.
+I am Alex, an undergraduate student at the <a href="http://www2.warwick.ac.uk/">University of Warwick</a> interested in number theory, geometry and algorithms.<br />
+There is a picture of me.<br />
+And below are some things you might actually have come here looking for.
 </p>
+</div>
+<div class="col-sm-3">
+<img src="img/me.jpg" class="img-responsive img-rounded pull-right" alt="Picture of me">
+</div>
+</div>
+</div>
 
-<br />
-
+<div class="container">
+<div class="row">
+<div class="panel panel-primary">
+<div class="panel-heading">
 <h4>Documents</h4>
+</div>
+<div class="panel-body">
 <p>
 <a href="wulnr/CS254.pdf">Lecture notes</a> for <a href="http://www2.warwick.ac.uk/fac/sci/dcs/teaching/modules/cs254">CS254 Algorithmic Graph Theory</a>
 </p>
+</div>
+</div>
 
-<br />
-
+<div class="panel panel-primary">
+<div class="panel-heading">
 <h4>Teaching</h4>
-<h5>CS137 Discrete Maths and its Applications 2<h5>
+</div>
+<div class="panel-body">
+<h5>CS137 Discrete Maths and its Applications 2:</h5>
 <p>
-<a href="cs137/cs137-q1.pdf">Seminar 1 question sheet</a>
+<a href="cs137/cs137-q1.pdf">Seminar 1 question sheet</a><br />
+<a href="cs137/cs137-q2.pdf">Seminar 2 question sheet</a>
 </p>
+</div>
+</div>
 
-<br />
-
+<div class="panel panel-primary">
+<div class="panel-heading">
 <h4>Talks</h4>
-<p>Geometric approaches to solving Diophantine equations, at <a href="http://mathsoc.cms.gre.ac.uk/tmt/">Tomorrow's Mathematicians Today 2013</a>, <a href="TMTTalkSlides.pdf">(slides)</a>
-<br />
+</div>
+<div class="panel-body">
+<p>
 Category Theory I, at Warwick Mathematics Society talks (with <a href="http://homepages.warwick.ac.uk/~maulfn/">Ben Wormleighton</a>)
+<br />
+Geometric approaches to solving Diophantine equations, at <a href="http://mathsoc.cms.gre.ac.uk/tmt/">Tomorrow's Mathematicians Today 2013</a>, <a href="TMTTalkSlides.pdf">(slides)</a>
 </p>
+</div>
+</div>
+</div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
