--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Alex Best's homepage
 <h1>Hello world!</h1>
 <p>
 I am Alex, an undergraduate student at the <a href="http://www2.warwick.ac.uk/">University of Warwick</a> interested in number theory, geometry and algorithms.<br />
-There is a picture of me.<br />
+Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.
 </p>
 </div>
@@ -45,7 +45,8 @@ And below are some things you might actually have come here looking for.
 <h5>CS137 Discrete Maths and its Applications 2:</h5>
 <p>
 <a href="cs137/cs137-q1.pdf">Seminar 1 question sheet</a><br />
-<a href="cs137/cs137-q2.pdf">Seminar 2 question sheet</a>
+<a href="cs137/cs137-q2.pdf">Seminar 2 question sheet</a><br />
+<a href="cs137/cs137-q3.pdf">Seminar 3 question sheet</a>
 </p>
 </div>
 </div>
