--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ And below are some things you might actually have come here looking for.
 <p>
 <a href="cs137/cs137-q1.pdf">Seminar 1 question sheet</a><br />
 <a href="cs137/cs137-q2.pdf">Seminar 2 question sheet</a><br />
-<a href="cs137/cs137-q3.pdf">Seminar 3 question sheet</a>
+<a href="cs137/cs137-q3.pdf">Seminar 3 question sheet</a><br />
+<a href="cs137/cs137-q4.pdf">Seminar 4 question sheet</a>
 </p>
 </div>
 </div>
