--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@ And below are some things you might actually have come here looking for.
 </div>
 <div class="panel-body">
 <p>
+Riemann Hypotheses, at Warwick Mathematics Society talks <a href="talks/riemann/slides.pdf">(slides)</a>
+<br />
 Category Theory I, at Warwick Mathematics Society talks (with <a href="http://homepages.warwick.ac.uk/~maulfn/">Ben Wormleighton</a>)
 <br />
-Geometric approaches to solving Diophantine equations, at <a href="http://mathsoc.cms.gre.ac.uk/tmt/">Tomorrow's Mathematicians Today 2013</a>, <a href="TMTTalkSlides.pdf">(slides)</a>
+Geometric approaches to solving Diophantine equations, at <a href="http://mathsoc.cms.gre.ac.uk/tmt/">Tomorrow's Mathematicians Today 2013</a>, <a href="talks/geometric-diophantine/slides.pdf">(slides)</a>
 </p>
 </div>
 </div>
