--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="dist/js/bootstrap.min.js"></script>
+<script src="scripts/instantclick.min.js" data-no-instant></script>
+<script data-no-instant>InstantClick.init();</script>
 
 </body>
 </html>
