--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html>
 <head>
 <meta charset="utf-8">
+
 <title>
 Alex Best's homepage
 </title>
+
 <link href="dist/css/bootstrap.css" rel="stylesheet">
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48250536-1', 'warwick.ac.uk');
+  ga('send', 'pageview');
+</script>
+
 </head>
+
 <body>
 <div class="jumbotron">
 <div class="row">
