--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ And below are some things you might actually have come here looking for.
 <a href="cs137/cs137-q3.pdf">Seminar 3 question sheet</a><br />
 <a href="cs137/cs137-q4.pdf">Seminar 4 question sheet</a><br />
 <a href="cs137/cs137-q5.pdf">Seminar 5 question sheet</a><br />
-<a href="cs137/cs137-q6.pdf">Seminar 6 question sheet</a>
+<a href="cs137/cs137-q6.pdf">Seminar 6 question sheet</a><br />
+<a href="cs137/cs137-q7.pdf">Seminar 7 question sheet</a>
 </p>
 </div>
 </div>
