--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@ And below are some things you might actually have come here looking for.
 <div class="panel-body">
 <h5>CS137 Discrete Maths and its Applications 2:</h5>
 <p>
+<a href="cs137/cs137-qs.pdf">All seminar questions in one document</a><br />
 <a href="cs137/cs137-q1.pdf">Seminar 1 question sheet</a><br />
 <a href="cs137/cs137-q2.pdf">Seminar 2 question sheet</a><br />
 <a href="cs137/cs137-q3.pdf">Seminar 3 question sheet</a><br />
 <a href="cs137/cs137-q4.pdf">Seminar 4 question sheet</a><br />
 <a href="cs137/cs137-q5.pdf">Seminar 5 question sheet</a><br />
 <a href="cs137/cs137-q6.pdf">Seminar 6 question sheet</a><br />
-<a href="cs137/cs137-q7.pdf">Seminar 7 question sheet</a>
+<a href="cs137/cs137-q7.pdf">Seminar 7 question sheet</a><br />
+<a href="cs137/cs137-q8.pdf">Seminar 9 question sheet</a>
 </p>
 </div>
 </div>
