--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ And below are some things you might actually have come here looking for.
 <h4>Teaching</h4>
 </div>
 <div class="panel-body">
-<h5>CS137 Discrete Maths and its Applications 2:</h5>
+<h5>CS137 Discrete Maths and its Applications 2 (Warwick 2014):</h5>
 <p>
 <a href="cs137/cs137-qs.pdf">All seminar questions in one document</a><br />
 <a href="cs137/cs137-q1.pdf">Seminar 1 question sheet</a><br />
