--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 Alex Best's homepage
 </title>
 
-<link href="dist/css/bootstrap.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="css/stackicons-social.css" />
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -85,11 +86,24 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 </p>
 </div>
 </div>
+
+<div class="panel panel-primary">
+<div class="panel-heading">
+<h4>Find me on the web</h4>
+</div>
+<div class="panel-body">
+<a class="st-icon-twitter" href="https://www.twitter.com/alexjbest">Twitter</a>
+<a class="st-icon-github" href="https://www.github.com/alexjbest">Github</a>
+<a class="st-icon-wordpress" href="http://alexanderjbest.wordpress.com">Wordpress</a>
+<a class="st-icon-stackoverflow" href="http://stackexchange.com/users/1506678/alex?tab=accounts">Stackexchange</a>
+<!-- flickr, lastfm soundcloud email?? -->
+</div>
+</div>
 </div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="dist/js/bootstrap.min.js"></script>
-<script src="scripts/instantclick.min.js" data-no-instant></script>
+<script src="scripts/bootstrap.min.js"></script>
+<script src="scripts/instantclick.js" data-no-instant></script>
 <script data-no-instant>InstantClick.init();</script>
 
 </body>
