--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 </div>
 </div>
 </div>
+</div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="scripts/bootstrap.min.js"></script>
