made small change to site to see if it will cause github pages to update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Alex Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, an undergraduate student at the <a href="http://www2.warwick.ac.uk/">University of Warwick</a> interested in number theory, geometry and algorithms.<br />
+I am Alex, an student currently in academic limbo over the summer (previously at the <a href="http://www2.warwick.ac.uk/">University of Warwick</a>) interested in number theory, geometry and algorithms.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.
 </p>
