--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Alex Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, an student currently in academic limbo over the summer (previously at the <a href="http://www2.warwick.ac.uk/">University of Warwick</a>) interested in number theory, geometry and algorithms.<br />
+I am Alex, an student currently at the <a href="http://www.cam.ac.uk/">University of Cambridge</a> (previously at the <a href="http://www2.warwick.ac.uk/">University of Warwick</a>) interested in number theory, geometry and algorithms.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.
 </p>
@@ -41,6 +41,22 @@ And below are some things you might actually have come here looking for.
 
 <div class="container">
 <div class="row">
+
+<div class="panel panel-primary">
+<div class="panel-heading">
+<h4>Talks</h4>
+</div>
+<div class="panel-body">
+<p>
+Riemann Hypotheses, at Warwick Mathematics Society talks <a href="talks/riemann/slides.pdf">(slides)</a>
+<br />
+Category Theory I, at Warwick Mathematics Society talks (with <a href="http://homepages.warwick.ac.uk/~maulfn/">Ben Wormleighton</a>)
+<br />
+Geometric approaches to solving Diophantine equations, at <a href="http://mathsoc.cms.gre.ac.uk/tmt/">Tomorrow's Mathematicians Today 2013</a>, <a href="talks/geometric-diophantine/slides.pdf">(slides)</a>
+</p>
+</div>
+</div>
+
 <div class="panel panel-primary">
 <div class="panel-heading">
 <h4>Documents</h4>
@@ -74,27 +90,12 @@ And below are some things you might actually have come here looking for.
 
 <div class="panel panel-primary">
 <div class="panel-heading">
-<h4>Talks</h4>
-</div>
-<div class="panel-body">
-<p>
-Riemann Hypotheses, at Warwick Mathematics Society talks <a href="talks/riemann/slides.pdf">(slides)</a>
-<br />
-Category Theory I, at Warwick Mathematics Society talks (with <a href="http://homepages.warwick.ac.uk/~maulfn/">Ben Wormleighton</a>)
-<br />
-Geometric approaches to solving Diophantine equations, at <a href="http://mathsoc.cms.gre.ac.uk/tmt/">Tomorrow's Mathematicians Today 2013</a>, <a href="talks/geometric-diophantine/slides.pdf">(slides)</a>
-</p>
-</div>
-</div>
-
-<div class="panel panel-primary">
-<div class="panel-heading">
 <h4>Find me on the web</h4>
 </div>
 <div class="panel-body">
+<a class="st-icon-wordpress" href="http://alexanderjbest.wordpress.com">Wordpress</a>
 <a class="st-icon-twitter" href="https://www.twitter.com/alexjbest">Twitter</a>
 <a class="st-icon-github" href="https://www.github.com/alexjbest">Github</a>
-<a class="st-icon-wordpress" href="http://alexanderjbest.wordpress.com">Wordpress</a>
 <a class="st-icon-stackoverflow" href="http://stackexchange.com/users/1506678/alex?tab=accounts">Stackexchange</a>
 <!-- flickr, lastfm soundcloud email?? -->
 </div>
