change google thingy

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@ Alex Best's homepage
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-48250536-1', 'warwick.ac.uk');
+  ga('create', 'UA-48250536-1', 'auto');
   ga('send', 'pageview');
+
 </script>
 
 </head>
