--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 </div>
 <div class="panel-body">
 <p>
-<a href="wulnr/CS254.pdf">Lecture notes</a> for <a href="http://www2.warwick.ac.uk/fac/sci/dcs/teaching/modules/cs254">CS254 Algorithmic Graph Theory</a>
+For lecture notes see <a href="https://alexjbest.github.io/mjolnir/">MJOLNIR</a>.
 </p>
 </div>
 </div>
