--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 </div>
 <div class="panel-body">
 <p>
-For lecture notes see <a href="https://alexjbest.github.io/mjolnir/">Mjolnir</a>.
+For lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a>.
 </p>
 </div>
 </div>
