added sing-mod to index page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ And below are some things you might actually have come here looking for.
 </div>
 <div class="panel-body">
 <p>
+Singular Moduli, at <a href="http://www2.warwick.ac.uk/fac/sci/maths/research/events/2014-15/nonsymposium/wimp/">Warwick Imperial Autumn Meeting 2014</a> <a href="talks/singular-moduli/slides_h.pdf">(slides)</a>
+<br />
 Riemann Hypotheses, at Warwick Mathematics Society talks <a href="talks/riemann/slides.pdf">(slides)</a>
 <br />
 Category Theory I, at Warwick Mathematics Society talks (with <a href="http://homepages.warwick.ac.uk/~maulfn/">Ben Wormleighton</a>)
