--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ And below are some things you might actually have come here looking for.
 </p>
 </div>
 <div class="col-sm-3">
-<img src="img/me.jpg" class="img-responsive img-rounded pull-right" alt="Picture of me">
+<img src="img/me2015.jpg" class="img-responsive img-rounded pull-right" alt="Picture of me">
 </div>
 </div>
 </div>
