--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Alex Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, an student currently at the <a href="http://www.cam.ac.uk/">University of Cambridge</a> (previously at the <a href="http://www2.warwick.ac.uk/">University of Warwick</a>) interested in number theory, geometry and algorithms.<br />
+I am Alex, a recent maths graduate from the <a href="http://www.cam.ac.uk/">University of Cambridge</a> (previously at the <a href="http://www2.warwick.ac.uk/">University of Warwick</a>) interested in number theory, geometry and algorithms.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.
 </p>
