--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Singular Moduli, at <a href="http://www2.warwick.ac.uk/fac/sci/maths/research/ev
 <br />
 Riemann Hypotheses, at Warwick Mathematics Society talks <a href="talks/riemann/slides.pdf">(slides)</a>
 <br />
-Category Theory I, at Warwick Mathematics Society talks (with <a href="http://homepages.warwick.ac.uk/~maulfn/">Ben Wormleighton</a>)
+Category Theory I, at Warwick Mathematics Society talks (with <a href="https://math.berkeley.edu/~benw/">Ben Wormleighton</a>)
 <br />
 Geometric approaches to solving Diophantine equations, at <a href="http://mathsoc.cms.gre.ac.uk/tmt/">Tomorrow's Mathematicians Today 2013</a>, <a href="talks/geometric-diophantine/slides.pdf">(slides)</a>
 </p>
