added link to new version of blog

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@ And below are some things you might actually have come here looking for.
 
 <div class="panel panel-primary">
 <div class="panel-heading">
+<h4><a href="/blog/">My Blog (My Brain is Open)</a></h4>
+</div>
+</div>
+
+<div class="panel panel-primary">
+<div class="panel-heading">
 <h4>Talks</h4>
 </div>
 <div class="panel-body">
@@ -96,7 +102,7 @@ For lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a>.
 <h4>Find me on the web</h4>
 </div>
 <div class="panel-body">
-<a class="st-icon-wordpress" href="http://alexanderjbest.wordpress.com">Wordpress</a>
+<!-- <a class="st-icon-wordpress" href="http://alexanderjbest.wordpress.com">Wordpress</a> -->
 <a class="st-icon-twitter" href="https://www.twitter.com/alexjbest">Twitter</a>
 <a class="st-icon-github" href="https://www.github.com/alexjbest">Github</a>
 <a class="st-icon-stackoverflow" href="http://stackexchange.com/users/1506678/alex?tab=accounts">Stackexchange</a>
