quick update and fixed link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@ Alex Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, a recent maths graduate from the <a href="http://www.cam.ac.uk/">University of Cambridge</a> (previously at the <a href="http://www2.warwick.ac.uk/">University of Warwick</a>) interested in number theory, geometry and algorithms.<br />
+I am Alex, currently working at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU Kaiserslautern</a> on the <a href="http://mpir.org/">MPIR Library</a>, as part of the <a href="http://opendreamkit.org/">OpenDreamKit project</a>.
+I was previously at the <a href="http://www.cam.ac.uk/">University of Cambridge</a> and before that at the <a href="http://www2.warwick.ac.uk/">University of Warwick</a>.
+I am interested in number theory, geometry and algorithms (and of course many other things too).<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.
 </p>
@@ -45,7 +47,7 @@ And below are some things you might actually have come here looking for.
 
 <div class="panel panel-primary">
 <div class="panel-heading">
-<h4><a href="/blog/">My Blog (My Brain is Open)</a></h4>
+<h4><a href="blog/" style="color:white">My Blog (My Brain is Open)</a></h4><!-- TODO FIXME -->
 </div>
 </div>
 
