--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 </div>
 <div class="panel-body">
 <p>
-For lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a>.
+My <a href="partiiiessay/essay.pdf">Part III Essay on Serre's conjecture</a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
+(<a href="https://www.github.com/alexjbest/partiiiessay">source on GitHub</a>)
+<p>
+For lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a> (under construction for the foreseeable future)
 </p>
 </div>
 </div>
