--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 <div class="panel-body">
 <p>
 My <a href="partiiiessay/essay.pdf">Part III Essay on Serre's conjecture</a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
-(<a href="https://www.github.com/alexjbest/partiiiessay">source on GitHub</a>)
+(<a href="https://www.github.com/alexjbest/partiiiessay">source on GitHub</a>, comments welcome!)
 <p>
 For lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a> (under construction for the foreseeable future)
 </p>
