--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ Alex Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, currently working at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU Kaiserslautern</a> on the <a href="http://mpir.org/">MPIR Library</a>, as part of the <a href="http://opendreamkit.org/">OpenDreamKit project</a>.
-I was previously at the <a href="http://www.cam.ac.uk/">University of Cambridge</a> and before that at the <a href="http://www2.warwick.ac.uk/">University of Warwick</a>.
-I am interested in number theory, geometry and algorithms (and of course many other things too).<br />
+I am Alex, a first year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
+Previously I worked at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the Universities of <a href="http://www.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
+I am interested in many things, but mostly number theory and related topics right now.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.
 </p>
@@ -57,6 +57,8 @@ And below are some things you might actually have come here looking for.
 </div>
 <div class="panel-body">
 <p>
+Serre's Conjecture, at <a href="https://www.uni-ulm.de/">Ulm University</a> Oberseminar (based on part III essay below)
+<br />
 Singular Moduli, at <a href="http://www2.warwick.ac.uk/fac/sci/maths/research/events/2014-15/nonsymposium/wimp/">Warwick Imperial Autumn Meeting 2014</a> <a href="talks/singular-moduli/slides_h.pdf">(slides)</a>
 <br />
 Riemann Hypotheses, at Warwick Mathematics Society talks <a href="talks/riemann/slides.pdf">(slides)</a>
