--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ Alex Best's homepage
 <h1>Hello world!</h1>
 <p>
 I am Alex, a first year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
-Previously I worked at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the Universities of <a href="http://www.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
-I am interested in many things, but mostly number theory and related topics right now.<br />
+Previously I worked at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the <a href="http://www.cam.ac.uk/">Universities of Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
+I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.
 </p>
@@ -75,7 +75,12 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 <h4>Teaching</h4>
 </div>
 <div class="panel-body">
-<h5>CS137 Discrete Maths and its Applications 2 (Warwick 2014):</h5>
+<h5><b>EK102 Linear Algebra (BU Spring 2017):</b></h5>
+<p>
+Office hours: Thursdays 10-11am in MCS B46B.
+</p>
+<h5><b>MA121 Calculus I for Life and Social Scientsts (BU Fall 2016)</b></h5>
+<h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014):</b></h5>
 <p>
 <a href="cs137/cs137-qs.pdf">All seminar questions in one document</a><br />
 <a href="cs137/cs137-q1.pdf">Seminar 1 question sheet</a><br />
