--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@ Alex Best's homepage
 <h1>Hello world!</h1>
 <p>
 I am Alex, a first year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
-Previously I worked at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the <a href="http://www.cam.ac.uk/">Universities of Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
+Previously I worked at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the <a href="https://www.dpmms.cam.ac.uk/">Universities of Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now.<br />
 Here is a picture of me.<br />
-And below are some things you might actually have come here looking for.
+And below are some things you might actually have come here looking for.<br />
+If you want to send me an email, go ahead! Just replace the .github.io part of this web address with @google.com.
 </p>
 </div>
 <div class="col-sm-3">
