update, no office hours rn

--- a/index.html
+++ b/index.html
@@ -76,10 +76,7 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 <h4>Teaching</h4>
 </div>
 <div class="panel-body">
-<h5><b>EK102 Linear Algebra (BU Spring 2017):</b></h5>
-<p>
-Office hours: Thursdays 10-11am in MCS B46B.
-</p>
+<h5><b>EK102 Linear Algebra (BU Spring 2017)</b></h5>
 <h5><b>MA121 Calculus I for Life and Social Scientsts (BU Fall 2016)</b></h5>
 <h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014):</b></h5>
 <p>
