move teaching, calc 1 added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,32 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 
 <div class="panel panel-primary">
 <div class="panel-heading">
+<h4>Teaching</h4>
+</div>
+<div class="panel-body">
+<h5><b>MA123 Calculus 1 Section A2 (BU Summer 1 2017):</b></h5>
+<p>
+Watch this space!
+<p>
+<h5><b>EK102 Linear Algebra (BU Spring 2017)</b></h5>
+<h5><b>MA121 Calculus I for Life and Social Scientsts (BU Fall 2016)</b></h5>
+<h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014):</b></h5>
+<p>
+<a href="cs137/cs137-qs.pdf">All seminar questions in one document</a><br />
+<a href="cs137/cs137-q1.pdf">Seminar 1 question sheet</a><br />
+<a href="cs137/cs137-q2.pdf">Seminar 2 question sheet</a><br />
+<a href="cs137/cs137-q3.pdf">Seminar 3 question sheet</a><br />
+<a href="cs137/cs137-q4.pdf">Seminar 4 question sheet</a><br />
+<a href="cs137/cs137-q5.pdf">Seminar 5 question sheet</a><br />
+<a href="cs137/cs137-q6.pdf">Seminar 6 question sheet</a><br />
+<a href="cs137/cs137-q7.pdf">Seminar 7 question sheet</a><br />
+<a href="cs137/cs137-q8.pdf">Seminar 9 question sheet</a>
+</p>
+</div>
+</div>
+
+<div class="panel panel-primary">
+<div class="panel-heading">
 <h4><a href="blog/" style="color:white">My Blog (My Brain is Open)</a></h4><!-- TODO FIXME -->
 </div>
 </div>
@@ -67,28 +93,6 @@ Riemann Hypotheses, at Warwick Mathematics Society talks <a href="talks/riemann/
 Category Theory I, at Warwick Mathematics Society talks (with <a href="https://math.berkeley.edu/~benw/">Ben Wormleighton</a>)
 <br />
 Geometric approaches to solving Diophantine equations, at <a href="http://mathsoc.cms.gre.ac.uk/tmt/">Tomorrow's Mathematicians Today 2013</a>, <a href="talks/geometric-diophantine/slides.pdf">(slides)</a>
-</p>
-</div>
-</div>
-
-<div class="panel panel-primary">
-<div class="panel-heading">
-<h4>Teaching</h4>
-</div>
-<div class="panel-body">
-<h5><b>EK102 Linear Algebra (BU Spring 2017)</b></h5>
-<h5><b>MA121 Calculus I for Life and Social Scientsts (BU Fall 2016)</b></h5>
-<h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014):</b></h5>
-<p>
-<a href="cs137/cs137-qs.pdf">All seminar questions in one document</a><br />
-<a href="cs137/cs137-q1.pdf">Seminar 1 question sheet</a><br />
-<a href="cs137/cs137-q2.pdf">Seminar 2 question sheet</a><br />
-<a href="cs137/cs137-q3.pdf">Seminar 3 question sheet</a><br />
-<a href="cs137/cs137-q4.pdf">Seminar 4 question sheet</a><br />
-<a href="cs137/cs137-q5.pdf">Seminar 5 question sheet</a><br />
-<a href="cs137/cs137-q6.pdf">Seminar 6 question sheet</a><br />
-<a href="cs137/cs137-q7.pdf">Seminar 7 question sheet</a><br />
-<a href="cs137/cs137-q8.pdf">Seminar 9 question sheet</a>
 </p>
 </div>
 </div>
