--- a/index.html
+++ b/index.html
@@ -48,26 +48,24 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 
 <div class="panel panel-primary">
 <div class="panel-heading">
-<h4>Teaching</h4>
+<a href="teaching/" style="color:white"><h4>My Teaching Page</h4></a>
 </div>
 <div class="panel-body">
-<h5><b>MA123 Calculus 1 Section A2 (BU Summer 1 2017):</b></h5>
-<p>
-Watch this space!
-<p>
+Quick links:
+<a href="teaching/ma123s117/"><h5><b>MA123 Calculus 1 Section A2 (BU Summer 1 2017)</b></h5></a>
 <h5><b>EK102 Linear Algebra (BU Spring 2017)</b></h5>
 <h5><b>MA121 Calculus I for Life and Social Scientsts (BU Fall 2016)</b></h5>
-<h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014):</b></h5>
+<a href="teaching/ma123s117/"><h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014):</b></h5></a>
 <p>
-<a href="cs137/cs137-qs.pdf">All seminar questions in one document</a><br />
-<a href="cs137/cs137-q1.pdf">Seminar 1 question sheet</a><br />
-<a href="cs137/cs137-q2.pdf">Seminar 2 question sheet</a><br />
-<a href="cs137/cs137-q3.pdf">Seminar 3 question sheet</a><br />
-<a href="cs137/cs137-q4.pdf">Seminar 4 question sheet</a><br />
-<a href="cs137/cs137-q5.pdf">Seminar 5 question sheet</a><br />
-<a href="cs137/cs137-q6.pdf">Seminar 6 question sheet</a><br />
-<a href="cs137/cs137-q7.pdf">Seminar 7 question sheet</a><br />
-<a href="cs137/cs137-q8.pdf">Seminar 9 question sheet</a>
+<a href="teaching/cs137/cs137-qs.pdf">All seminar questions in one document</a><br />
+<a href="teaching/cs137/cs137-q1.pdf">Seminar 1 question sheet</a><br />
+<a href="teaching/cs137/cs137-q2.pdf">Seminar 2 question sheet</a><br />
+<a href="teaching/cs137/cs137-q3.pdf">Seminar 3 question sheet</a><br />
+<a href="teaching/cs137/cs137-q4.pdf">Seminar 4 question sheet</a><br />
+<a href="teaching/cs137/cs137-q5.pdf">Seminar 5 question sheet</a><br />
+<a href="teaching/cs137/cs137-q6.pdf">Seminar 6 question sheet</a><br />
+<a href="teaching/cs137/cs137-q7.pdf">Seminar 7 question sheet</a><br />
+<a href="teaching/cs137/cs137-q8.pdf">Seminar 9 question sheet</a>
 </p>
 </div>
 </div>
@@ -106,7 +104,7 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 My <a href="partiiiessay/essay.pdf">Part III Essay on Serre's conjecture</a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
 (<a href="https://www.github.com/alexjbest/partiiiessay">source on GitHub</a>, comments welcome!)
 <p>
-For lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a> (under construction for the foreseeable future)
+For (some old) lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a> (indefinitely under construction)
 </p>
 </div>
 </div>
@@ -116,11 +114,10 @@ For lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a> 
 <h4>Find me on the web</h4>
 </div>
 <div class="panel-body">
-<!-- <a class="st-icon-wordpress" href="http://alexanderjbest.wordpress.com">Wordpress</a> -->
 <a class="st-icon-twitter" href="https://www.twitter.com/alexjbest">Twitter</a>
 <a class="st-icon-github" href="https://www.github.com/alexjbest">Github</a>
 <a class="st-icon-stackoverflow" href="http://stackexchange.com/users/1506678/alex?tab=accounts">Stackexchange</a>
-<!-- flickr, lastfm soundcloud email?? -->
+<!-- flickr, lastfm soundcloud ?? -->
 </div>
 </div>
 </div>
