--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Quick links:
 <h5><b>MA121 Calculus I for Life and Social Scientsts (BU Fall 2016)</b></h5>
 <a href="teaching/cs137/"><h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014):</b></h5></a>
 </div>
+</div>
 
 <div class="panel panel-primary">
 <div class="panel-heading">
