--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Previously I worked at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.<br />
-If you want to send me an email, go ahead! Just replace the .github.io part of this web address with @google.com.
+If you want to send me an email, go ahead! Just replace the .github.io part of this web address with @gmail.com.
 </p>
 </div>
 <div class="col-sm-3">
