--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Quick links:
 <a href="teaching/ma123s117/"><h5><b>MA123 Calculus 1 Section A2 (BU Summer 1 2017)</b></h5></a>
 <h5><b>EK102 Linear Algebra (BU Spring 2017)</b></h5>
 <h5><b>MA121 Calculus I for Life and Social Scientsts (BU Fall 2016)</b></h5>
-<a href="teaching/cs137/"><h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014):</b></h5></a>
+<a href="teaching/cs137/"><h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014)</b></h5></a>
 </div>
 </div>
 
