--- a/buntes/index.html
+++ b/buntes/index.html
@@ -54,6 +54,11 @@ Quandles
 <tr><td>Non-abelian graded quandle cohomology</td><td>Ricky</td></tr>
 <tr><td>Inter-universal Quandle theory</td><td>Alex (with assistance from Ricky)</td></tr>
 <tr><td>Involuntary Quandles</td><td>Angus (with assistance from Ricky)</td></tr>
+<tr><td>Derived quandles</td><td>Xiao</td></tr>
+<tr><td>Vertex Quandles</td><td>Jackson</td></tr>
+<tr><td>p-divisible Quandles</td><td>Jared</td></tr>
+<tr><td>Homological mirror Quandles</td><td>Eric</td></tr>
+<tr><td>Strong Quandles</td><td>Brian</td></tr>
 </table>
 </div>
 </div>
