--- a/buntes/index.html
+++ b/buntes/index.html
@@ -59,6 +59,7 @@ Quandles
 <tr><td>p-divisible Quandles</td><td>Jared</td></tr>
 <tr><td>Homological mirror Quandles</td><td>Eric</td></tr>
 <tr><td>Strong Quandles</td><td>Brian</td></tr>
+<tr><td>Kokopopquandles</td><td>Eric</td></tr>
 </table>
 </div>
 </div>
