--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Alex Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, a first year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
+I am Alex, a second year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
 Previously I worked at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the <a href="https://www.dpmms.cam.ac.uk/">Universities of Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now.<br />
 Here is a picture of me.<br />
@@ -51,17 +51,19 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <a href="teaching/" style="color:white"><h4>My Teaching Page</h4></a>
 </div>
 <div class="panel-body">
-Quick links:
-<a href="teaching/ma123s117/"><h5><b>MA123 Calculus 1 Section A2 (BU Summer 1 2017)</b></h5></a>
-<h5><b>EK102 Linear Algebra (BU Spring 2017)</b></h5>
-<h5><b>MA121 Calculus I for Life and Social Scientsts (BU Fall 2016)</b></h5>
-<a href="teaching/cs137/"><h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014)</b></h5></a>
+Current:
+<h5><b>MA225 Multivariable Calculus (BU Fall 2017) (TA)</b></h5>
+Past:
+<a href="teaching/ma123s117/"><h5><b>MA123 Calculus 1 Section A2 (BU Summer 1 2017) (Lecturer)</b></h5></a>
+<h5><b>EK102 Linear Algebra (BU Spring 2017) (TA)</b></h5>
+<h5><b>MA121 Calculus I for Life and Social Scientists (BU Fall 2016) (TA)</b></h5>
+<a href="teaching/cs137/"><h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014) (TA)</b></h5></a>
 </div>
 </div>
 
 <div class="panel panel-primary">
 <div class="panel-heading">
-<h4><a href="blog/" style="color:white">My Blog (My Brain is Open)</a></h4><!-- TODO FIXME -->
+<h4><a href="blog/" style="color:white">My Blog - My Brain is Open</a></h4><!-- TODO FIXME -->
 </div>
 </div>
 
