--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 </div>
 <div class="panel-body">
 Current:
-<h5><b>MA225 Multivariable Calculus (BU Fall 2017) (TA) - Office hour: Fridays 2:30-3:30 in B46B</b></h5>
+<h5>None</h5>
 Past:
+<h5><b>MA225 Multivariable Calculus (BU Fall 2017) (TA)</b></h5>
 <a href="teaching/ma123s117/"><h5><b>MA123 Calculus 1 Section A2 (BU Summer 1 2017) (Lecturer)</b></h5></a>
 <h5><b>EK102 Linear Algebra (BU Spring 2017) (TA)</b></h5>
 <h5><b>MA121 Calculus I for Life and Social Scientists (BU Fall 2016) (TA)</b></h5>
