--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <a href="teaching/" style="color:white"><h4>My Teaching Page</h4></a>
 </div>
 <div class="panel-body">
-Current:
-<h5>None</h5>
+Current: None
 Past:
 <h5><b>MA225 Multivariable Calculus (BU Fall 2017) (TA)</b></h5>
 <a href="teaching/ma123s117/"><h5><b>MA123 Calculus 1 Section A2 (BU Summer 1 2017) (Lecturer)</b></h5></a>
