--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Alex Best's homepage
 I am Alex, a second year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
 Previously I worked at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the <a href="https://www.dpmms.cam.ac.uk/">Universities of Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now.<br />
+I would try to be more specific, but honestly there is just too much cool stuff out there.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.<br />
 If you want to send me an email, go ahead! Just replace the .github.io part of this web address with @gmail.com.
@@ -67,6 +68,12 @@ For (some old) lecture notes see <a href="http://alexjbest.github.io/mjolnir/">M
 
 <div class="panel panel-primary">
 <div class="panel-heading">
+<h4><a href="blog/" style="color:white">My Blog - My Brain is Open</a></h4><!-- TODO FIXME -->
+</div>
+</div>
+
+<div class="panel panel-primary">
+<div class="panel-heading">
 <a href="teaching/" style="color:white"><h4>My Teaching Page</h4></a>
 </div>
 <div class="panel-body">
@@ -77,12 +84,6 @@ Past:
 <h5><b>EK102 Linear Algebra (BU Spring 2017) (TA)</b></h5>
 <h5><b>MA121 Calculus I for Life and Social Scientists (BU Fall 2016) (TA)</b></h5>
 <a href="teaching/cs137/"><h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014) (TA)</b></h5></a>
-</div>
-</div>
-
-<div class="panel panel-primary">
-<div class="panel-heading">
-<h4><a href="blog/" style="color:white">My Blog - My Brain is Open</a></h4><!-- TODO FIXME -->
 </div>
 </div>
 
