wow bu math no https, SAD

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 </div>
 <div class="panel-body">
 <p>
-I am currently taking fancy notes in <a href="https://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on Automorphic forms and the Arthur-Selberg trace formula, <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">you can follow along here</a>!<br />
+I am currently taking fancy notes in <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on Automorphic forms and the Arthur-Selberg trace formula, <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">you can follow along here</a>!<br />
 There is also a <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">pdf version</a>
 </p>
 <p>
