--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ I am currently taking fancy notes in <a href="http://math.bu.edu/people/saaltug/
 There is also a <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">pdf version</a>
 </p>
 <p>
-My <a href="partiiiessay/essay.pdf" onClick="ga('send', 'event', 'download', 'click', ‘Essay');">Part III Essay on Serre's conjecture</a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
+My <a href="partiiiessay/essay.pdf" onClick="ga('send', 'event', 'download', 'click', 'Essay');">Part III Essay on Serre's conjecture</a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
 (<a href="https://www.github.com/alexjbest/partiiiessay">source on GitHub</a>, comments welcome!)
 <p>
 For (some old) lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a>.
