--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 </div>
 <div class="panel-body">
 <p>
-I am currently taking fancy notes in <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on Automorphic forms and the Arthur-Selberg trace formula, <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">you can follow along here</a>!<br />
+I took some fancy notes in <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on Automorphic forms and the Arthur-Selberg trace formula, <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">check them out</a>!<br />
 There is also a <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">pdf version</a>
 </p>
 <p>
@@ -89,11 +89,14 @@ Past:
 
 <div class="panel panel-primary">
 <div class="panel-heading">
-<h4>Some (expository) talks (many with notes)</h4>
+<h4>Some (expository) talks (many with notes in the link)</h4>
 </div>
 <div class="panel-body">
 <p>
-A Smörgåsbord of Dessins d'Enfants <a href="http://math.bu.edu/people/angusmca/buntes/spring2018.html">BUNTES Spring 2018</a>
+The (inescapable) p-adics, a lightning talk at the BU Math retreat <a href="talks/inescapable/slides.pdf">(slides)</a>
+<br />
+A Smörgåsbord of Dessins d'Enfants, and Dessins, integer points on elliptic curves and
+a proof of the ABC conjecture <a href="http://math.bu.edu/people/angusmca/buntes/spring2018.html">BUNTES Spring 2018</a>
 <br />
 The Tannakian formalism cannot hurt you <a href="http://math.mit.edu/nt/stage.html">STAGE Spring 2018</a>
 <br />
