--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 </div>
 <div class="panel-body">
 <p>
+Explicit Coleman integration in Larger Characteristic <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a>
+<br />
 Computing Zeta Functions of Cyclic Covers in Large Characteristic (with Vishal Arul, Edgar Costa, Richard Magner and Nicholas Triantafillou) <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a>
-<!--<br />
-Explicit Coleman integration in Larger Characteristic <a href="https://arxiv.org/abs/1806.????">(arXiv)</a> -->
 </p>
 </div>
 </div>
@@ -87,16 +87,16 @@ For (some old) lecture notes see <a href="http://alexjbest.github.io/mjolnir/">M
 
 <div class="panel panel-primary">
 <div class="panel-heading">
-<a href="teaching/" style="color:white"><h4>My Teaching Page</h4></a>
+<h4><a href="teaching/" style="color:white">My Teaching Page</a></h4>
 </div>
 <div class="panel-body">
 Current: None<br />
 Past:
 <h5><b>MA225 Multivariable Calculus (BU Fall 2017) (TA)</b></h5>
-<a href="teaching/ma123s117/"><h5><b>MA123 Calculus 1 Section A2 (BU Summer 1 2017) (Lecturer)</b></h5></a>
+<h5><a href="teaching/ma123s117/"><b>MA123 Calculus 1 Section A2 (BU Summer 1 2017) (Lecturer)</b></a></h5>
 <h5><b>EK102 Linear Algebra (BU Spring 2017) (TA)</b></h5>
 <h5><b>MA121 Calculus I for Life and Social Scientists (BU Fall 2016) (TA)</b></h5>
-<a href="teaching/cs137/"><h5><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014) (TA)</b></h5></a>
+<h5><a href="teaching/cs137/"><b>CS137 Discrete Maths and its Applications 2 (Warwick 2014) (TA)</b></a></h5>
 </div>
 </div>
 
@@ -138,6 +138,7 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 <a class="st-icon-twitter" href="https://www.twitter.com/alexjbest">Twitter</a>
 <a class="st-icon-github" href="https://www.github.com/alexjbest">Github</a>
 <a class="st-icon-stackoverflow" href="http://stackexchange.com/users/1506678/alex?tab=accounts">Stackexchange</a>
+<a itemprop="sameAs" content="https://orcid.org/0000-0002-5741-674X" href="https://orcid.org/0000-0002-5741-674X" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon"></a>
 <!-- flickr, lastfm soundcloud ?? -->
 </div>
 </div>
