--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <h4>Papers</h4>
 </div>
 <div class="panel-body">
-<ul>
-    <li>Explicit Coleman integration in Larger Characteristic <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a></li>
-    <li>Computing Zeta Functions of Cyclic Covers in Large Characteristic (with Vishal Arul, Edgar Costa, Richard Magner and Nicholas Triantafillou) <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a></li>
+<ul class="list-group list-group-flush">
+    <li class="list-group-item">Explicit Coleman integration in Larger Characteristic <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a></li>
+    <li class="list-group-item">Computing Zeta Functions of Cyclic Covers in Large Characteristic (with Vishal Arul, Edgar Costa, Richard Magner and Nicholas Triantafillou) <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a></li>
 </ul>
 </div>
 </div>
