--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@ Alex Best's homepage
 
 </script>
 
+<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
+<link href="https://aimath.org/knowlstyle.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="https://aimath.org/knowl.js"></script>
+
+
 </head>
 
 <body>
@@ -54,8 +59,8 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 </div>
 <div class="panel-body">
 <ul class="list-group list-group-flush">
-    <li class="list-group-item">Explicit Coleman integration in Larger Characteristic <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a></li>
-    <li class="list-group-item">Computing Zeta Functions of Cyclic Covers in Large Characteristic (with Vishal Arul, Edgar Costa, Richard Magner and Nicholas Triantafillou) <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a></li>
+    <li class="list-group-item">Explicit Coleman integration in Larger Characteristic <a knowl="explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a></li>
+    <li class="list-group-item">Computing Zeta Functions of Cyclic Covers in Large Characteristic (with Vishal Arul, Edgar Costa, Richard Magner and Nicholas Triantafillou)  <a knowl="zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a></li>
 </ul>
 </div>
 </div>
