--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <h4>Papers</h4>
 </div>
 <div class="panel-body">
-<ul class="list-group list-group-flush">
-    <li class="list-group-item">Explicit Coleman integration in Larger Characteristic <a knowl="explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a></li>
-    <li class="list-group-item">Computing Zeta Functions of Cyclic Covers in Large Characteristic (with Vishal Arul, Edgar Costa, Richard Magner and Nicholas Triantafillou)  <a knowl="zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a></li>
-</ul>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item"><a name="paper-coleman-larger">Explicit Coleman integration in Larger Characteristic</a> <a knowl="explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a></li>
+        <li class="list-group-item"><a name="paper-zeta-larger">Computing Zeta Functions of Cyclic Covers in Large Characteristic (with Vishal Arul, Edgar Costa, Richard Magner and Nicholas Triantafillou)</a>  <a knowl="zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a></li>
+    </ul>
 </div>
 </div>
 
@@ -106,10 +106,12 @@ Past:
 
 <div class="panel panel-primary">
 <div class="panel-heading">
-<h4>Some (expository) talks (many with notes in the link)</h4>
+<h4>Some talks (many with notes in the link)</h4>
 </div>
 <div class="panel-body">
 <p>
+Explicit Coleman integration in Larger Characteristic, ANTS XIII UW-Madison 17/7/18 <a href="#paper-coleman-larger">(paper)</a> <a href="talks/coleman-harvey/slides.pdf">(slides)</a>
+<br />
 The (inescapable) p-adics, a lightning talk at the BU Math retreat <a href="talks/inescapable/slides.pdf">(slides)</a>
 <br />
 A Smörgåsbord of Dessins d'Enfants, and Dessins, integer points on elliptic curves and
