--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Past:
 </div>
 <div class="panel-body">
 <p>
-Explicit Coleman integration in Larger Characteristic, ANTS XIII UW-Madison 17/7/18 <a href="#paper-coleman-larger">(paper)</a> <a href="talks/coleman-harvey/slides.pdf">(slides)</a>
+Explicit Coleman integration in Larger Characteristic, ANTS XIII UW-Madison 17/7/18 <a href="#paper-coleman-larger">(paper above)</a> <a href="talks/coleman-harvey/slides_h.pdf">(slides)</a>
 <br />
 The (inescapable) p-adics, a lightning talk at the BU Math retreat <a href="talks/inescapable/slides.pdf">(slides)</a>
 <br />
