--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 </div>
 <div class="panel-body">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a name="paper-coleman-larger">Explicit Coleman integration in Larger Characteristic</a> <a knowl="explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a></li>
-        <li class="list-group-item"><a name="paper-zeta-larger">Computing Zeta Functions of Cyclic Covers in Large Characteristic (with Vishal Arul, Edgar Costa, Richard Magner and Nicholas Triantafillou)</a>  <a knowl="zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a></li>
+        <li class="list-group-item"><a name="paper-coleman-larger">Explicit Coleman integration in Larger Characteristic</a> <a knowl="papers/explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a></li>
+        <li class="list-group-item"><a name="paper-zeta-larger">Computing Zeta Functions of Cyclic Covers in Large Characteristic (with Vishal Arul, Edgar Costa, Richard Magner and Nicholas Triantafillou)</a>  <a knowl="papers/zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a></li>
     </ul>
 </div>
 </div>
