--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 </div>
 <div class="panel-body">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a name="paper-coleman-larger"></a>Explicit Coleman integration in Larger Characteristic <a knowl="papers/explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a></li>
+        <li class="list-group-item"><a name="paper-coleman-larger"></a>Explicit Coleman Integration in Larger Characteristic <a knowl="papers/explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a></li>
         <li class="list-group-item"><a name="paper-zeta-larger"></a>Computing Zeta Functions of Cyclic Covers in Large Characteristic (with Vishal Arul, Edgar Costa, Richard Magner and Nicholas Triantafillou) <a knowl="papers/zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a></li>
     </ul>
 </div>
@@ -110,7 +110,7 @@ Past:
 </div>
 <div class="panel-body">
 <p>
-Explicit Coleman integration in Larger Characteristic, ANTS XIII UW-Madison 17/7/18 <a href="#paper-coleman-larger">(paper above)</a> <a href="talks/coleman-harvey/slides_h.pdf">(slides)</a>
+Explicit Coleman Integration in Larger Characteristic, ANTS XIII UW-Madison 17/7/18 <a href="#paper-coleman-larger">(paper above)</a> <a href="talks/coleman-harvey/slides_h.pdf">(slides)</a>
 <br />
 The (inescapable) p-adics, a lightning talk at the BU Math retreat <a href="talks/inescapable/slides.pdf">(slides)</a>
 <br />
