--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Alex Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, a second year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
+I am Alex, a third year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
 Previously I worked at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the <a href="https://www.dpmms.cam.ac.uk/">Universities of Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now.<br />
 I would try to be more specific, but honestly there is just too much cool stuff out there.<br />
