--- a/index.html
+++ b/index.html
@@ -70,9 +70,12 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <h4>Other Documents</h4>
 </div>
 <div class="panel-body">
+<p>Once again I am taking fancy notes in <a href="http://math.bu.edu/people/saaltug/2018_3/2018_3_sem.html">Ali Altuğ's class</a> this time the topic is Equidistribution in Number theory, <a href="equidistribution/equidistribution.html">check them out</a>!<br />
+There is also a <a href="equidistribution/equidistribution.pdf">pdf version</a>
+</p>
 <p>
-I took some fancy notes in <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on Automorphic forms and the Arthur-Selberg trace formula, <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">check them out</a>!<br />
-There is also a <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">pdf version</a>
+I took notes in <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on Automorphic forms and the Arthur-Selberg trace formula, <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">check them out</a>!<br />
+<a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">pdf version</a>
 </p>
 <p>
 My <a href="partiiiessay/essay.pdf" onClick="ga('send', 'event', 'download', 'click', 'Essay');">Part III Essay on Serre's conjecture</a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
