--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <h4>Other Documents</h4>
 </div>
 <div class="panel-body">
-<p>Once again I am taking fancy notes in <a href="http://math.bu.edu/people/saaltug/2018_3/2018_3_sem.html">Ali Altuğ's class</a> this time the topic is Equidistribution in Number theory, <a href="equidistribution/equidistribution.html">check them out</a>!<br />
+<p>Once again I am taking fancy notes in <a href="http://math.bu.edu/people/saaltug/2018_3/2018_3_sem.html">Ali Altuğ's class</a>, this time the topic is Equidistribution in Number theory, <a href="equidistribution/equidistribution.html">check them out</a>!<br />
 There is also a <a href="equidistribution/equidistribution.pdf">pdf version</a>
 </p>
 <p>
