--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Alex Best's homepage
 I am Alex, a third year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
 Previously I worked at <a href="http://www.mathematik.uni-kl.de/en/homepage/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the <a href="https://www.dpmms.cam.ac.uk/">Universities of Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now. I would try to be more specific, but honestly there is just too much cool stuff out there.<br />
-My PhD supervisor is <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>.
+My PhD supervisor is <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.<br />
 If you want to send me an email, go ahead! Just replace the .github.io part of this web address with @gmail.com.
