--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@ Past:
 </div>
 <div class="panel-body">
 <p>
+Quaternion Algebras, <a href="http://math.bu.edu/people/midff/buntes/fall2018.html">BUNTES Fall 2018</a>
+<br />
 Explicit Coleman Integration in Larger Characteristic, ANTS XIII UW-Madison 17/7/18 <a href="#paper-coleman-larger">(paper above)</a> <a href="talks/coleman-harvey/slides_h.pdf">(slides)</a>
 <br />
 The (inescapable) p-adics, a lightning talk at the BU Math retreat <a href="talks/inescapable/slides.pdf">(slides)</a>
@@ -120,7 +122,7 @@ The (inescapable) p-adics, a lightning talk at the BU Math retreat <a href="talk
 A Smörgåsbord of Dessins d'Enfants, and Dessins, integer points on elliptic curves and
 a proof of the ABC conjecture <a href="http://math.bu.edu/people/angusmca/buntes/spring2018.html">BUNTES Spring 2018</a>
 <br />
-The Tannakian formalism cannot hurt you <a href="http://math.mit.edu/nt/stage.html">STAGE Spring 2018</a>
+The Tannakian formalism cannot hurt you <a href="http://math.mit.edu/nt/old/stage_s18.html">STAGE Spring 2018</a>
 <br />
 Various in <a href="http://math.bu.edu/people/angusmca/buntes/fall2017.html">BUNTES 2017</a> (Abelian varieties: Complex theory, Étale cohomology, the Rosati involution)
 <br />
