--- a/index.html
+++ b/index.html
@@ -70,19 +70,21 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <h4>Other Documents</h4>
 </div>
 <div class="panel-body">
-<p>Once again I am taking fancy notes in <a href="http://math.bu.edu/people/saaltug/2018_3/2018_3_sem.html">Ali Altuğ's class</a>, this time the topic is Equidistribution in Number theory, <a href="equidistribution/equidistribution.html">check them out</a>!<br />
-There is also a <a href="equidistribution/equidistribution.pdf">pdf version</a>
-</p>
-<p>
-I took notes in <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on Automorphic forms and the Arthur-Selberg trace formula, <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">check them out</a>!<br />
-<a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">pdf version</a>
-</p>
-<p>
-My <a href="partiiiessay/essay.pdf" onClick="ga('send', 'event', 'download', 'click', 'Essay');">Part III Essay on Serre's conjecture</a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
-(<a href="https://www.github.com/alexjbest/partiiiessay">source on GitHub</a>, comments welcome!)
-<p>
-For (some old) lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a>.
-</p>
+    <p>I took some fancy notes in <a href="http://math.bu.edu/people/saaltug/2018_3/2018_3_sem.html">Ali Altuğ's class</a>, on Equidistribution in Number theory, check them out: <br />
+    <a href="equidistribution/equidistribution.html">Web notes on Equidistribution in Number theory</a><br />
+    <a href="equidistribution/equidistribution.pdf">Pdf notes on Equidistribution in Number theory,</a>
+    </p>
+    <p>
+    I also took notes in <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on Automorphic forms and the Arthur-Selberg trace formula:<br />
+    <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">Web notes on Automorphic forms and the Arthur-Selberg trace formula</a><br />
+    <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">Pdf notes on Automorphic forms and the Arthur-Selberg trace formula</a>
+    </p>
+    <p>
+    My <a href="partiiiessay/essay.pdf" onClick="ga('send', 'event', 'download', 'click', 'Essay');">Part III Essay on Serre's conjecture</a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
+    (<a href="https://www.github.com/alexjbest/partiiiessay">source on GitHub</a>, comments welcome!)
+    <p>
+    For (some old) lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a>.
+    </p>
 </div>
 </div>
 
@@ -109,13 +111,24 @@ Past:
 
 <div class="panel panel-primary">
 <div class="panel-heading">
-<h4>Some talks (many with notes in the link)</h4>
+<h4>Research talks</h4>
 </div>
 <div class="panel-body">
 <p>
-Quaternion Algebras, <a href="http://math.bu.edu/people/midff/buntes/fall2018.html">BUNTES Fall 2018</a>
-<br />
 Explicit Coleman Integration in Larger Characteristic, ANTS XIII UW-Madison 17/7/18 <a href="#paper-coleman-larger">(paper above)</a> <a href="talks/coleman-harvey/slides_h.pdf">(slides)</a>
+</p>
+</div>
+</div>
+
+<div class="panel panel-primary">
+<div class="panel-heading">
+<h4>Some expository talks (some with notes in the link)</h4>
+</div>
+<div class="panel-body">
+<p>
+The Kodaira-Parshin construction <a href="http://math.mit.edu/nt/old/stage_f18.html">STAGE Fall 2018</a>
+<br />
+Quaternion Algebras, <a href="http://math.bu.edu/people/midff/buntes/fall2018.html">BUNTES Fall 2018</a>
 <br />
 The (inescapable) p-adics, a lightning talk at the BU Math retreat <a href="talks/inescapable/slides.pdf">(slides)</a>
 <br />
