--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 
 <div class="panel panel-primary">
 <div class="panel-heading">
-<h4>Papers</h4>
+<h4>Publications</h4>
 </div>
 <div class="panel-body">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a name="paper-coleman-larger"></a>Explicit Coleman Integration in Larger Characteristic <a knowl="papers/explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a></li>
-        <li class="list-group-item"><a name="paper-zeta-larger"></a>Computing Zeta Functions of Cyclic Covers in Large Characteristic (with <a href="http://math.mit.edu/~varul/">Vishal Arul</a>, <a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>, <a href="http://math.bu.edu/people/rmagner/">Richard Magner</a> and <a href="https://math.mit.edu/~ngtriant/">Nicholas Triantafillou</a>) <a knowl="papers/zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a></li>
+        <li class="list-group-item"><a name="paper-coleman-larger"></a>Explicit Coleman Integration in Larger Characteristic <a knowl="papers/explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a> DOI: <a href="https://doi.org/10.2140/obs.2019.2.85">10.2140/obs.2019.2.85</a></li>
+        <li class="list-group-item"><a name="paper-zeta-larger"></a>Computing Zeta Functions of Cyclic Covers in Large Characteristic (with <a href="http://math.mit.edu/~varul/">Vishal Arul</a>, <a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>, <a href="http://math.bu.edu/people/rmagner/">Richard Magner</a> and <a href="https://math.mit.edu/~ngtriant/">Nicholas Triantafillou</a>) <a knowl="papers/zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a> DOI: <a href="https://doi.org/10.2140/obs.2019.2.37">10.2140/obs.2019.2.37</a></li>
     </ul>
 </div>
 </div>
@@ -126,9 +126,9 @@ Explicit Coleman Integration in Larger Characteristic, ANTS XIII UW-Madison 17/7
 </div>
 <div class="panel-body">
 <p>
-The Kodaira-Parshin construction <a href="http://math.mit.edu/nt/old/stage_f18.html">STAGE Fall 2018</a>
+The Kodaira-Parshin construction, <a href="http://math.mit.edu/nt/old/stage_f18.html">STAGE Fall 2018</a>
 <br />
-Quaternion Algebras, <a href="http://math.bu.edu/people/midff/buntes/fall2018.html">BUNTES Fall 2018</a>
+Quaternion Algebras, and Descent and Canonical Models <a href="http://math.bu.edu/people/midff/buntes/fall2018.html">BUNTES Fall 2018</a>
 <br />
 The (inescapable) p-adics, a lightning talk at the BU Math retreat <a href="talks/inescapable/slides.pdf">(slides)</a>
 <br />
