--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <h4>Other Documents</h4>
 </div>
 <div class="panel-body">
-    <p>Notes from <a href="https://sites.google.com/view/cmaistret/teaching#h.p_BYGoPzU848FJ">Céline Maistret's class</a>, on <b>Ranks and Parity of Ranks of Curves and Abelian Surfaces</b>: <br />
+    <p>Notes from <a href="https://sites.google.com/view/cmaistret/teaching#h.p_BYGoPzU848FJ">Céline Maistret's class</a>, on <i>Ranks and Parity of Ranks of Curves and Abelian Surfaces</i>: <br />
         <a href="parity/parity.html">Web notes on Ranks and Parity of Ranks of Curves and Abelian Surfaces</a><br />
         <a href="parity/parity.pdf">Pdf notes on Ranks and Parity of Ranks of Curves and Abelian Surfaces</a>
     </p>
-    <p>Notes from <a href="http://math.bu.edu/people/saaltug/2018_3/2018_3_sem.html">Ali Altuğ's class</a>, on <b>Equidistribution in Number theory</b>: <br />
+    <p>Notes from <a href="http://math.bu.edu/people/saaltug/2018_3/2018_3_sem.html">Ali Altuğ's class</a>, on <i>Equidistribution in Number theory</i>: <br />
         <a href="equidistribution/equidistribution.html">Web notes on Equidistribution in Number theory</a><br />
         <a href="equidistribution/equidistribution.pdf">Pdf notes on Equidistribution in Number theory</a>
     </p>
-    <p>Notes from <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on <b>Automorphic forms and the Arthur-Selberg trace formula</b>:<br />
+    <p>Notes from <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on <i>Automorphic forms and the Arthur-Selberg trace formula</i>:<br />
         <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">Web notes on Automorphic forms and the Arthur-Selberg trace formula</a><br />
         <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">Pdf notes on Automorphic forms and the Arthur-Selberg trace formula</a>
     </p>
     <p>
-    My <a href="partiiiessay/essay.pdf" onClick="ga('send', 'event', 'download', 'click', 'Essay');">Part III Essay on <b>Serre's conjecture</b></a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
+    My <a href="partiiiessay/essay.pdf" onClick="ga('send', 'event', 'download', 'click', 'Essay');">Part III Essay on <i>Serre's conjecture</i></a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
     (<a href="https://www.github.com/alexjbest/partiiiessay">source on GitHub</a>, comments welcome!)
     <p>
     For (some old) lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a>.
