--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <div class="panel-body">
 Preprints:
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a name="paper-coleman-larger"></a>Two Recent p-adic Approaches Towards the (effective) Mordell Conjecture (with Jennifer Balakrishnan, Francesca Bianchi, Brian Lawrence, Steffen Müller, Nicholas Triantafillou and Jan Vonk) <a knowl="papers/mordell-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1910.12755">(arXiv)</a></li>
+        <li class="list-group-item"><a name="paper-coleman-larger"></a>Two Recent p-adic Approaches Towards the (effective) Mordell Conjecture (with <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>, <a href="http://people.maths.ox.ac.uk/bianchi/">Francesca Bianchi</a>, <a href="https://math.uchicago.edu/~brianrl/">Brian Lawrence</a>, <a href="https://www.rug.nl/staff/steffen.muller/">Steffen Müller</a>, <a href="https://ngtriant.github.io/">Nicholas Triantafillou</a> and <a href="https://www.math.ias.edu/~vonk/">Jan Vonk</a>) <a knowl="papers/mordell-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1910.12755">(arXiv)</a></li>
     </ul>
 Published:
     <ul class="list-group list-group-flush">
         <li class="list-group-item"><a name="paper-coleman-larger"></a>Explicit Coleman Integration in Larger Characteristic <a knowl="papers/explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a> doi:<a href="https://doi.org/10.2140/obs.2019.2.85">10.2140/obs.2019.2.85</a></li>
-        <li class="list-group-item"><a name="paper-zeta-larger"></a>Computing Zeta Functions of Cyclic Covers in Large Characteristic (with <a href="http://math.mit.edu/~varul/">Vishal Arul</a>, <a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>, <a href="http://math.bu.edu/people/rmagner/">Richard Magner</a> and <a href="https://math.mit.edu/~ngtriant/">Nicholas Triantafillou</a>) <a knowl="papers/zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a> doi:<a href="https://doi.org/10.2140/obs.2019.2.37">10.2140/obs.2019.2.37</a></li>
+        <li class="list-group-item"><a name="paper-zeta-larger"></a>Computing Zeta Functions of Cyclic Covers in Large Characteristic (with <a href="http://math.mit.edu/~varul/">Vishal Arul</a>, <a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>, <a href="http://math.bu.edu/people/rmagner/">Richard Magner</a> and <a href="https://ngtriant.github.io/">Nicholas Triantafillou</a>) <a knowl="papers/zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a> doi:<a href="https://doi.org/10.2140/obs.2019.2.37">10.2140/obs.2019.2.37</a></li>
     </ul>
 </div>
 </div>
