add link to buntes

--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 
 <div class="panel panel-primary">
 <div class="panel-heading">
+<h4>Seminars</h4>
+</div>
+<div class="panel-body">
+    I am running the <a href="buntes/index.html">BUNTES learning seminar this semester</a>: the topic is Abhyankar's conjecture.
+</div>
+</div>
+
+<div class="panel panel-primary">
+<div class="panel-heading">
 <h4>Publications</h4>
 </div>
 <div class="panel-body">
