--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.<br />
 If you want to send me an email, go ahead! Just replace the .github.io part of this web address with @gmail.com.
 </p>
-<p><b>I am on the academic job market this autumn/fall (2020)!</b></p>
+<p><b>I am on the academic job market this autumn/fall (2020)!</b> My <a href="alexjbestcv.pdf">CV is available</a>.</p>
 </div>
 <div class="col-sm-3">
 <img src="img/me2017.jpg" class="img-responsive img-rounded pull-right" alt="Picture of me">
@@ -178,7 +178,7 @@ Past:
 
 <div class="panel panel-primary">
 <div class="panel-heading">
-<h4>Some expository talks (some with notes in the link)</h4>
+<h4>Selected expository talks (some with notes in the link)</h4>
 </div>
 <div class="panel-body">
 <p>
